# Arm-Cortex-M-Base

./: CMakeLists.txt
app/: main.cpp
cmake/: Cmsis.cmake  FreeRTOS.cmake  TinyUSB.cmake  cmsis.cmake
cmake/toolchains/: cortex-m0.cmake
cmake/toolchains/common/: arm-none-eabi.cmake
src/: startup.cpp
test/: CMakeLists.txt
